# quark

./: .gitignore  .prettierignore  .prettierrc  README.md  bdocker.ps1  package-lock.json  package.json
backend/: Cargo.toml  Program.cs  Quark.csproj  _commands.txt  openapi.json  tables.sql
backend/Controllers/ProspectController/: ProspectController.Create.cs  ProspectController.Read.cs  ProspectController.Update.cs  ProspectController.cs
backend/Controllers/ProspectLayoutController/: ProspectLayoutController.Read.cs  ProspectLayoutController.Update.cs  ProspectLayoutController.cs
backend/Controllers/ProspectViewController/: ProspectViewController.Create.cs  ProspectViewController.Delete.cs  ProspectViewController.Read.cs  ProspectViewController.Update.cs  ProspectViewController.cs
backend/Controllers/TeamController/: TeamController.ChangeRole.cs  TeamController.Create.cs  TeamController.DefaultRole.cs  TeamController.GetMembers.cs  TeamController.Invite.cs  TeamController.RemoveMember.cs  TeamController.cs
backend/Data/: DataContext.cs
backend/Errors/: BadRequest.cs  Forbidden.cs  InternalError.cs  NotFound.cs  Unauthorized.cs
backend/Exceptions/: ExceptionHandler.cs  MissingConfigException.cs
backend/Migrations/: 20250807221447_AddMoreDataToUsers.Designer.cs  20250807221447_AddMoreDataToUsers.cs  20250808131557_AddTeams.Designer.cs  20250808131557_AddTeams.cs  20250808151909_AddLogoToTeam.Designer.cs  20250808151909_AddLogoToTeam.cs  20250808152435_MapDefaultTeam.Designer.cs  20250808152435_MapDefaultTeam.cs  20250808211359_AddProspectLayout.Designer.cs  20250808211359_AddProspectLayout.cs  20250809095321_AddProspects.Designer.cs  20250809095321_AddProspects.cs  20250809101254_FixProspectDataFieldId.Designer.cs  20250809101254_FixProspectDataFieldId.cs  20250812212835_AddProspectListViewItem.Designer.cs  20250812212835_AddProspectListViewItem.cs  20250813151431_FullDb.Designer.cs  20250813151431_FullDb.cs  20250814220119_FullDB.Designer.cs  20250814220119_FullDB.cs  20250820105744_AddDefaultRole.Designer.cs  20250820105744_AddDefaultRole.cs  20250822121415_RemoveExpireAtFromInvitations.Designer.cs  20250822121415_RemoveExpireAtFromInvitations.cs  DataContextModelSnapshot.cs
backend/Models/: Prospect.cs  ProspectDataField.cs  ProspectLayout.cs  ProspectListViewItem.cs  RefreshToken.cs  Team.cs  TeamInvitation.cs  TeamMember.cs  TeamRole.cs  User.cs
backend/Utilities/: AuthPolicies.cs  CacheKeys.cs  DateExtensions.cs  DefaultProspectLayout.cs  DefaultProspectTemplate.cs  DefaultProspectView.cs  DefaultTeamRoles.cs  EnumerableExtensions.cs  ExpressionExtensions.cs  PaginationCursorExtensions.cs  RateLimitingPolicies.cs
backend/proc_macros/: Cargo.toml
backend/src/: api_doc.rs  main.rs
desktop/: test.sh  (+8 more)
(+561 files in other folders)
