[package]
name = "quark"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
rand = "0.9.1"
sea-orm = { version = "1.1.13", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
sea-orm-migration = { version = "1.1.13", features = ["sqlx-postgres"]}
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
utoipa = { version = "5.4.0", features = ["actix_extras", "macros", "uuid"] }
utoipa-swagger-ui = "9.0.2"
uuid = { version = "1.17.0", features = ["v4", "v7"] }
