[package]
name = "quark"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "proc_macros"
]

[dependencies]
actix-limitation = "0.5.1"
actix-web = "4.11"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json"] }
resend-rs = "0.15.0"
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
sea-orm-migration = { version = "1.1.14", features = ["sqlx-postgres"]}
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "macros", "uuid"] }
utoipa-swagger-ui = "9.0.2"
uuid = { version = "1.17.0", features = ["serde", "v4", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }
actix-cors = "0.7.1"
image = { version = "0.25.6", features = ["jpeg", "png"] }
macros = { path = "./proc_macros" }
bitflags = "2.9.1"
lazy_static = "1.5.0"
regex = "1.11.1"
redis = { version = "0.32.4", features = ["cluster-async", "connection-manager", "r2d2", "safe_iterators", "tokio-comp", "tokio-native-tls-comp"] }
bb8 = "0.9.0"
bb8-redis = "0.24.0"
dotenv = "0.15.0"
num_enum = "0.7.4"
